# goeloggen

./: .gitignore  CHANGELOG-a11y.md  CHANGELOG.md  CLAUDE.md  CNAME  README.md  SECRETS.md  abo.html  briefschaften.html  cover-generator.html  farben.html  flexible-icons.html  icons.html  index-cover-generator.html  index-goelogger-gci1.html  index-visitenkarten-onepager.html  index.html  ineinander.html  karten-generator.html  karten.html  kerning.html  ligvorschau.html  logo-generator.html  marketing-maschine.html  ordner.html  portal.html  powerpoint.html  prinzipien.html  proof.html  robots.txt  schrift-vergleich.html  schrift-webfont.html  schriften.html  sektionen.json  sektionsfarben.html  signatur-generator.html  sortierer.html  statistik.html  tester.html  todo  (+10 more)
Material/: index.html  (+1 more)
services/brand-portrait/: .env.example  Makefile  README.md  pyproject.toml
services/brand-portrait/app/api/: dependencies.py  router.py
services/brand-portrait/app/core/: settings.py
services/brand-portrait/app/db/: base.py  session.py
services/brand-portrait/app/models/: __init__.py  audit_event.py  job.py  job_approval.py  variant.py
services/brand-portrait/app/schemas/: __init__.py
services/brand-portrait/app/services/: __init__.py  audit.py  auth.py  brand_profile.py  face_detection.py  inference.py  pipeline.py  precheck.py  storage.py
services/brand-portrait/app/worker/: main.py
services/brand-portrait/config/brand_profiles/: goe_brand_v1.json
services/brand-portrait/scripts/: retouch_studio.py
services/brand-portrait/tests/: __init__.py  test_auth.py
(+440 files in other folders)
